@@ -5,9 +5,14 @@ import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
+import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 
+/**
+ * 2.3.4 CustomAuthenticationProvider
+ */
+@Component
 public class CustomAuthenticationProvider implements AuthenticationProvider{
 	@Override
 	public Authentication authenticate(Authentication authentication) throws AuthenticationException {
@@ -16,7 +21,7 @@ public class CustomAuthenticationProvider implements AuthenticationProvider{
 		String password = String.valueOf(authentication.getCredentials());
 
 		if ( "john".equals(username) && "12345".equals(password) ){
-			return new UsernamePasswordAuthenticationToken(username, password, Arrays.asList());
+			return new UsernamePasswordAuthenticationToken(username, password, List.of());
 		} else {
 			throw new AuthenticationCredentialsNotFoundException("Error in authentication!");
 		}
